Ajustando page my-account v3

--- a/src/app/features/pages/my-account/home-my-account/home-my-account.component.html
+++ b/src/app/features/pages/my-account/home-my-account/home-my-account.component.html
@@ -19,7 +19,7 @@
                     }
                     <div>
                         <small class="ng-perfil-name">Olá, {{authDecodeUser.getName().split(" ")[0]}}!</small><br />
-                        <small class="ng-perfil-name">Email: {{ authDecodeUser.getSub() }}</small>
+                        <small class="ng-perfil-name">{{ authDecodeUser.getSub() }}</small>
                     </div>
                 </section>
                 <section class="ng-perfil profile">
