--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,11 +30,17 @@ body {
   font-style: var(--font-style);
   font-size: 18px;
   overflow: hidden;
+  height: 100dvh;
 }
 
 body, app-root {
   padding-bottom: 60px;
   margin: 0;
+}
+
+body {
+  touch-action: manipulation;
+  overscroll-behavior: none;
 }
 
 
