--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
@@ -8,7 +8,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        padding: 30px;
+        padding: 50px 30px;
         gap: 2rem;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
@@ -231,7 +231,22 @@
     margin-top: 40dvh;
 }
 
-// 
+.btn-voltar {
+    position: fixed;
+    top: 20px;
+    left: 15px;
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1000;
+
+    mat-icon {
+        color: #fff;
+    }
+}
+
+// ----------------------------------------------------------------------------- ///
 @media screen and (min-width:730px) {
     .ng-main {
         display: flex;
