--- a/src/app/features/pages/my-account/home-my-account/home-my-account.component.html
+++ b/src/app/features/pages/my-account/home-my-account/home-my-account.component.html
@@ -5,6 +5,12 @@
 
     <div class="ng-main">
 
+        @if(isVisible) {
+        <button class="btn-voltar" (click)="voltarPaginaAnterior()">
+            <mat-icon>arrow_back_ios</mat-icon>
+        </button>}
+
+
         <div class="container container1">
             <section class="ng-perfil perfil-principal">
                 <section class="ng-perfil">
@@ -18,7 +24,8 @@
                     </div>
                     }
                     <div>
-                        <small class="ng-perfil-name">Olá, {{authDecodeUser.getName().split(" ")[0]}}!</small><br />
+                        <small class="ng-perfil-name">Olá, <b>{{authDecodeUser.getName().split("
+                                ")[0]}}</b>!</small><br />
                         <small class="ng-perfil-name">{{ authDecodeUser.getSub() }}</small>
                     </div>
                 </section>
@@ -29,7 +36,7 @@
                     </button>
                     <button class="btn-profile" (click)="pageResetPassword()">
                         <mat-icon class="ng-menu-icon">key</mat-icon>
-                        <small class="ng-menu-name" >Alterar Senha</small>
+                        <small class="ng-menu-name">Alterar Senha</small>
                     </button>
                 </section>
             </section>
