--- a/src/app/features/pages/my-account/home-my-account/home-my-account.component.scss
+++ b/src/app/features/pages/my-account/home-my-account/home-my-account.component.scss
@@ -23,8 +23,8 @@
 
             .ng-perfil-name {
                 font-size: 14px;
-                font-weight: 600;
                 color: #fff;
+                text-decoration: none;
             }
 
             .avatar {
@@ -129,6 +129,7 @@
     .container1 {
         background: #3d5996;
         color: #ddd;
+        padding: 30px 40px;
     }
 
 
@@ -136,6 +137,23 @@
         border: none;
     }
 }
+
+.btn-voltar {
+    position: fixed;
+    top: 20px;
+    left: 15px;
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1000;
+
+    mat-icon {
+        color: #fff;
+    }
+}
+
+
 
 
 // -----------------------------------------------------------------------------------------------------------//
