--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
@@ -1,4 +1,9 @@
 <div class="ng-main">
+    @if(isVisible) {
+    <button class="btn-voltar" (click)="voltarPaginaAnterior()">
+        <mat-icon>arrow_back_ios</mat-icon>
+    </button>
+    }
     <div class="container">
         <div class="ng-cont1">
             <h2>Crie uma nova senha</h2>
@@ -41,7 +46,8 @@
             <!-- Step 2 -->
             <div *ngIf="currentStep === 2" class="form-step step-2">
                 <div class="card flex justify-center custom-otp">
-                    <p-inputotp #primeiroInput autofocus [length]="6" formControlName="code" (keydown.enter)="validarCodigo()" />
+                    <p-inputotp #primeiroInput autofocus [length]="6" formControlName="code"
+                        (keydown.enter)="validarCodigo()" />
                 </div>
                 @if (isRequired('code')) {
                 <small class="ng-error">Informe o código de verificação!</small>
@@ -90,6 +96,9 @@
                     senha</button>
             </div>
         </form>
-        <button class="ng-btn ng-btn-signup" mat-flat-button color="secundary" (click)="pageSignin()">Login</button>
+    @if(!isVisible) {
+        <button class="ng-btn ng-btn-signup" mat-flat-button color="secundary"
+            (click)="voltarPaginaAnterior()">Voltar</button>
+    }
     </div>
 </div>
