--- a/src/app/features/pages/home/header/header.component.html
+++ b/src/app/features/pages/home/header/header.component.html
@@ -59,14 +59,15 @@
 
                         <nav>
                             <ul>
-                                <li>Editar Perfil</li>
-                                <li>Meus Pedidos</li>
+                                <li (click)="pageManagerProfile()">Editar Perfil</li>
+                                <li>Minhas Compras</li>
                                 <li (click)="pageMyAccount()">Minha Conta</li>
                                 <!-- so aparecer quando o usuario estiver logado e o perfil for admin -->
                                 @if (!isAdminRoute() && authDecodeUser.getRole().includes("ROLE_ADMIN")) {
                                 <li (click)="adminrouter()" [class.disabled]="isAdminRoute()">zapdai
                                     admin</li>
                                 }
+                                <li (click)="pageResetPassword()">Alterar Senha</li>
 
                             </ul>
                         </nav>
