--- a/src/app/features/pages/my-account/home-my-account/home-my-account.component.scss
+++ b/src/app/features/pages/my-account/home-my-account/home-my-account.component.scss
@@ -1,7 +1,7 @@
 .ng-main {
     width: 100%;
     height: 100dvh;
-    background: #F2F2F2;
+    background: #fff;
     overflow: auto;
     padding-bottom: 80px;
     gap: 30px 0;
@@ -162,7 +162,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background: #F2F2F2;
+        background: #fff;
         height: auto;
         padding-top: 46px;
 
