--- a/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.scss
+++ b/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.scss
@@ -1,7 +1,7 @@
 .ng-main {
     width: 100%;
     height: 100dvh;
-    background: #F2F2F2;
+    background: #fff;
     overflow: auto;
     position: fixed;
     padding-top: 60px;
@@ -99,7 +99,7 @@
             width: 100%;
             gap: 10px 0;
 
-            .form-step .ng-fieldset {
+            .ng-fieldset {
                 width: 100%;
                 padding: 2px;
                 border-radius: 5px;
@@ -109,7 +109,7 @@
                 legend {
                     font-size: 12px;
                     font-weight: 500;
-                    color: #bbb;
+                    color: #333;
                     padding: 0 4px;
                 }
 
@@ -120,11 +120,11 @@
                     width: 100%;
                     height: 30px;
                     font-size: 16px;
-                    color: #eee;
+                    color: #444;
                 }
 
                 .ng-input::placeholder {
-                    color: #999;
+                    color: #888;
                     font-size: 14px;
                     padding-left: 10px;
                 }
@@ -175,7 +175,7 @@
                 border-radius: 12px;
                 font-weight: 550;
                 font-size: 16px;
-                background-color: #F2F2F2;
+                background-color: #fff;
                 color: #ccc;
                 transition: all 0.3s ease;
 
@@ -239,18 +239,17 @@
     .ng-main {
         display: flex;
         justify-content: center;
-        align-items: center;
-        background: #F2F2F2;
+        background: #fff;
         width: 100%;
-        height: 100vh;
+        height: auto;
 
         .container {
             display: flex;
             flex-direction: column;
             width: 80%;
             height: auto;
-            padding: 25px 30px;
-            gap: 10px;
+            padding: 50px;
+            gap: 30px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 20px;
             border-radius: 12px;
