Ajustando a page Manager Profile v02

--- a/src/app/features/pages/home/header/header.component.html
+++ b/src/app/features/pages/home/header/header.component.html
@@ -73,8 +73,8 @@
                         </nav>
                     </div>
                     <div class="linha"></div>
-                    <div class="detalhes a">
-                        <button class="btn" (click)="deslogar()">Sair</button>
+                    <div class="a">
+                        <button class="btn-logOut" (click)="deslogar()">Sair</button>
                     </div>
                 </div>
             </div>
