--- a/src/app/features/pages/my-account/home-my-account/home-my-account.component.html
+++ b/src/app/features/pages/my-account/home-my-account/home-my-account.component.html
@@ -8,7 +8,8 @@
         @if(isVisible) {
         <button class="btn-voltar" (click)="voltarPaginaAnterior()">
             <mat-icon>arrow_back_ios</mat-icon>
-        </button>}
+        </button>
+        }
 
 
         <div class="container container1">
