--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -4,7 +4,7 @@
     height: 55px;
     align-items: center;
     padding: 0 20px;
-    background-color: #0a1630;
+    background-color: #0d1d3f;
     color: #DDD;
     position: fixed;
     top: 0;
@@ -174,9 +174,8 @@
 .menu {
     background-color: #0a1630;
     right: 0;
-    top: 7%;
+    top: 55px;
     position: absolute;
-    padding: 0 20px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     position: fixed;
@@ -184,7 +183,6 @@
     .menu_drop {
         display: flex;
         flex-direction: column;
-        padding: 10px 0;
 
         .menu_area {
             display: flex;
@@ -193,14 +191,14 @@
 
             li {
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-                padding: 5px 0;
+                padding: 10px 25px;
                 font-size: 15px;
                 color: #BBB;
                 cursor: pointer;
             }
 
             li:hover {
-                color: #064b5a;
+                background-color: #1f2f55;
             }
 
         }
@@ -210,7 +208,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            padding: 0px 2px;
+            padding: 10px 25px;
 
             p {
                 font-size: 16px;
@@ -219,10 +217,17 @@
         }
 
         .a {
-            .btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 10px;
+
+            .btn-logOut {
                 background-color: #FF9933;
+                font-weight: 600;
+                width: 90%;
                 border-radius: 5px;
-                padding: 2px 0;
+                padding: 10px 25px;
                 border: 0;
                 transition: all 1s ease-in;
                 transform: scale(0.97);
