--- a/src/app/features/pages/home/mobile-navbar/mobile-navbar.component.scss
+++ b/src/app/features/pages/home/mobile-navbar/mobile-navbar.component.scss
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #0a1630;
+  background-color: #0d1d3f;
   display: flex;
   justify-content: space-around;
   border-top: 1px solid #ddd;
@@ -15,7 +15,7 @@
     text-align: center;
     padding: 8px 0;
     color: #ddd;
-    font-size: 9px;
+    font-size: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
