--- a/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.scss
+++ b/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.scss
@@ -4,93 +4,12 @@
     background: #fff;
     overflow: auto;
     position: fixed;
-    padding-top: 60px;
 
     .container {
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        gap: 30px;
         padding: 30px;
-        gap: 2rem;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-        .ng-cont1 {
-            display: flex;
-            flex-direction: column;
-            height: 25%;
-
-            h2 {
-                text-align: center;
-                font-size: 18px;
-                margin-bottom: 20px;
-                color: #ddd;
-            }
-
-            .steps-indicator {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                width: 100%;
-            }
-
-            .steps-indicator div {
-                display: flex;
-                justify-content: space-between;
-                width: 100%;
-                font-weight: 500;
-                color: #ddd;
-                gap: 10px;
-                font-size: 8px;
-
-                .ng-cont {
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: center;
-                    flex-direction: row;
-                    gap: 0;
-                    cursor: default;
-                    user-select: none;
-                    transition: background-color 0.3s ease;
-                    padding: 0 30px;
-
-
-                    .ng-bola {
-                        display: inline-block;
-                        width: 20px;
-                        height: 20px;
-                        border-radius: 50%;
-                        background-color: #ccc;
-                        font-weight: 600;
-                        color: #555;
-                        line-height: 20px;
-                        text-align: center;
-                    }
-
-                    .ng-hr {
-                        width: 45%;
-                        height: 3px;
-                        background-color: #ddd;
-                    }
-
-
-                    .ng-bola.active,
-                    .ng-hr.active,
-                    .ng-p.active {
-                        background-color: #af5ffa;
-                        color: #ccc;
-                    }
-                }
-
-                .ng-p.active {
-                    color: #af5ffa;
-                }
-
-            }
-        }
-
-        .mat-mdc-chip-set {
-            max-width: 200px;
-        }
 
         form {
             display: flex;
@@ -99,12 +18,13 @@
             width: 100%;
             gap: 10px 0;
 
+
             .ng-fieldset {
                 width: 100%;
                 padding: 2px;
                 border-radius: 5px;
                 margin-top: 15px;
-                border-color: #bbb;
+                border-color: #888;
 
                 legend {
                     font-size: 12px;
@@ -116,7 +36,7 @@
                 .ng-input {
                     background-color: transparent;
                     outline: none;
-                    border: 0;
+                    border: none;
                     width: 100%;
                     height: 30px;
                     font-size: 16px;
@@ -194,44 +114,106 @@
 
             }
 
+
+            .tab-container {
+                font-family: Arial, sans-serif;
+            }
+
+            .tab-header {
+                display: flex;
+                gap: 0 10px;
+
+                button {
+                    flex: 1;
+                    padding: 4px 8px;
+                    border: none;
+                    background: transparent;
+                    color: white;
+                    cursor: pointer;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 6px;
+                    background-color: #468ed6;
+                    border-radius: 100px;
+                    font-size: 12px;
+
+                    &.active {
+                        background-color: #0d59af;
+                        font-weight: bold;
+                    }
+
+                    mat-icon {
+                        font-size: 20px;
+                    }
+
+                    &:hover {
+                        background-color: #0d47a1;
+                    }
+                }
+            }
+
+            .tab-body {
+                padding: 15px 0;
+                background-color: #fff;
+
+                h3 {
+                    margin-top: 0;
+                }
+
+                label {
+                    display: block;
+                    margin-bottom: 12px;
+
+                    input {
+                        width: 100%;
+                        padding: 6px;
+                        border: 1px solid #ccc;
+                        border-radius: 4px;
+                    }
+                }
+            }
+
+
+
         }
 
 
-        .buttons {
-            display: flex;
-            justify-content: space-between;
-            gap: 0 15px;
-
-
-            .ng-btn {
-                width: 100%;
-                height: 35px;
-                border-radius: 5px;
-                border: 1px solid #c8c8c8;
-                cursor: pointer;
-                font-family: var(--font-family);
-                font-size: 14px;
-                font-weight: 500;
-                color: #592d74;
-                margin-top: 20px;
-            }
-
-            .ng-btn:hover {
-                background-color: #eee;
-            }
-
-            .ng-btn:active {
-                transform: scale(0.97);
-
-            }
-
-            .ng-btn:disabled {
-                color: #888;
-            }
+        .ng-btn {
+            width: 100%;
+            height: 35px;
+            border-radius: 5px;
+            border: 1px solid #c8c8c8;
+            cursor: pointer;
+            font-family: var(--font-family);
+            font-size: 14px;
+            font-weight: 500;
+            color: #fff;
+            margin-top: 20px;
+            background-color: #112855;
         }
+
+        .ng-btn:hover {
+            background-color: #22438a;
+        }
+
+        .ng-btn:active {
+            transform: scale(0.97);
+
+        }
+
+        .ng-btn:disabled {
+            color: #888;
+        }
+
     }
+
 }
 
+::ng-deep .p-tabview {
+    border: none !important;
+    box-shadow: none !important;
+}
 
 
 // 
@@ -242,6 +224,7 @@
         background: #fff;
         width: 100%;
         height: auto;
+        padding-top: 60px;
 
         .container {
             display: flex;
