Ajustantando rota admin e subrotas

--- a/src/app/features/pages/destaque/destaque.component.html
+++ b/src/app/features/pages/destaque/destaque.component.html
@@ -1,13 +1,16 @@
-<app-modal>
-  <app-carrossel></app-carrossel>
-<app-modal>
-<div class="ng-itens">
-  <app-opcoes-categoria></app-opcoes-categoria>
-  <app-opcoes-categoria></app-opcoes-categoria>
-  <app-opcoes-categoria></app-opcoes-categoria>
-  <app-opcoes-categoria></app-opcoes-categoria>
-  <app-opcoes-categoria></app-opcoes-categoria>
-
-
-</div>
-<app-mais-postados title="Mais procurados"></app-mais-postados>
+  <app-modal>
+    <app-carrossel></app-carrossel>
+    <app-modal>
+      <div class="ng-itens">
+        <app-opcoes-categoria></app-opcoes-categoria>
+        <app-opcoes-categoria></app-opcoes-categoria>
+        <app-opcoes-categoria></app-opcoes-categoria>
+        <app-opcoes-categoria></app-opcoes-categoria>
+        <app-opcoes-categoria></app-opcoes-categoria>
+      </div>
+      <app-mais-postados title="Mais procurados"></app-mais-postados>
+      <app-mais-postados title="Mais procurados"></app-mais-postados>
+      <app-mais-postados title="Mais procurados"></app-mais-postados>
+      <app-mais-postados title="Mais procurados"></app-mais-postados>
+    </app-modal>
+  </app-modal>
