--- a/src/app/features/pages/home/header/header.component.html
+++ b/src/app/features/pages/home/header/header.component.html
@@ -32,52 +32,54 @@
 
     <div class="card flex justify-center">
         @if (token != null) {
-            <section class="ng-perfil" (click)="Tmenu()">
+        <section class="ng-perfil" (click)="Tmenu()">
+            <mat-icon (click)="light()">
+                light_mode
+            </mat-icon>
 
 
-
-                <small class="ng-perfil-name">Olá, {{authDecodeUser.getName().split(" ")[0]}}</small>
-                @if (!authDecodeUser.getAvatar()) {
-                <mat-icon class="ng-avatar-icon">
-                    person
-                </mat-icon>
-                }@else {
-                <div class="avatar">
-                    <img [src]="authDecodeUser.getAvatar()" />
-                </div>
-                }
-            </section>
+            <small class="ng-perfil-name">Olá, {{authDecodeUser.getName().split(" ")[0]}}</small>
+            @if (!authDecodeUser.getAvatar()) {
+            <mat-icon class="ng-avatar-icon">
+                person
+            </mat-icon>
+            }@else {
+            <div class="avatar">
+                <img [src]="authDecodeUser.getAvatar()" />
+            </div>
+            }
+        </section>
         }
         @if (exibimenu) {
-            <div class="menu">
-                <div class="menu_drop">
-                    <div class="detalhes">
-                        <p >{{ authDecodeUser.getSub() }}</p>
-                    </div>
-                    <div class="linha"></div>
-                    <div class="menu_area">
+        <div class="menu">
+            <div class="menu_drop">
+                <div class="detalhes">
+                    <p>{{ authDecodeUser.getSub() }}</p>
+                </div>
+                <div class="linha"></div>
+                <div class="menu_area">
 
-                        <nav>
-                            <ul>
-                                <li (click)="pageManagerProfile()">Editar Perfil</li>
-                                <li>Minhas Compras</li>
-                                <li (click)="pageMyAccount()">Minha Conta</li>
-                                <!-- so aparecer quando o usuario estiver logado e o perfil for admin -->
-                                @if (!isAdminRoute() && authDecodeUser.getRole().includes("ROLE_ADMIN")) {
-                                <li (click)="adminrouter()" [class.disabled]="isAdminRoute()">zapdai
-                                    admin</li>
-                                }
-                                <li (click)="pageResetPassword()">Alterar Senha</li>
+                    <nav>
+                        <ul>
+                            <li (click)="pageManagerProfile()">Editar Perfil</li>
+                            <li>Minhas Compras</li>
+                            <li (click)="pageMyAccount()">Minha Conta</li>
+                            <!-- so aparecer quando o usuario estiver logado e o perfil for admin -->
+                            @if (!isAdminRoute() && authDecodeUser.getRole().includes("ROLE_ADMIN")) {
+                            <li (click)="adminrouter()" [class.disabled]="isAdminRoute()">zapdai
+                                admin</li>
+                            }
+                            <li (click)="pageResetPassword()">Alterar Senha</li>
 
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="linha"></div>
-                    <div class="a">
-                        <button class="btn-logOut" (click)="deslogar()">Sair</button>
-                    </div>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="linha"></div>
+                <div class="a">
+                    <button class="btn-logOut" (click)="deslogar()">Sair</button>
                 </div>
             </div>
+        </div>
         }
     </div>
 
