--- a/src/app/features/pages/home/home.component.scss
+++ b/src/app/features/pages/home/home.component.scss
@@ -1,19 +1,13 @@
 .ng-container{
     display: flex;
-    height: 100vh;
-    aside{
-       overflow: hidden;
-
-    }
+    height: auto;
     .ng-main{
         flex: 1;
+            padding: 0 10px;
         .area-main{
             background-color: #f2f2f2;
-            height: 100vh;
-            overflow: auto;
-            scrollbar-width: thin;
+            height: auto;
             scrollbar-color: #505861 #f2f2f2;
-            padding: 0 10px;
 
         }
     }
@@ -21,6 +15,6 @@
 
 @media screen and (min-width: 768px) {
     .ng-container {
-        padding-top: 46px;
+        padding-top: 60px;
     }
 }
