--- a/src/app/features/pages/home/header/header.component.html
+++ b/src/app/features/pages/home/header/header.component.html
@@ -67,7 +67,7 @@
                             <li>Minhas Compras</li>
                             <li (click)="pageMyAccount()">Minha Conta</li>
                             <!-- so aparecer quando o usuario estiver logado e o perfil for admin -->
-                            @if (!isAdminRoute() && authDecodeUser.getRole().includes("ROLE_ADMIN")) {
+                            @if (authDecodeUser.getRole().includes("ROLE_ADMIN")) {
                             <li (click)="adminrouter()" [class.disabled]="isAdminRoute()">zapdai
                                 admin</li>
                             }
