--- a/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.html
+++ b/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.html
@@ -91,7 +91,7 @@
                         </fieldset>
 
 
-                        <button mat-flat-button type="button" class="ng-btn" >Enviar código</button>
+                        <button mat-flat-button type="button" class="ng-btn" >Atualizar Endereço</button>
                     </div>
                     }
                 </div>
