--- a/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.scss
+++ b/src/app/features/pages/profileEdition/form-ProfileEdition/form-ProfileEdition.component.scss
@@ -3,7 +3,6 @@
     height: 100dvh;
     background: #fff;
     overflow: auto;
-    position: fixed;
 
     .container {
         display: flex;
@@ -224,69 +223,17 @@
         background: #fff;
         width: 100%;
         height: auto;
-        padding-top: 60px;
+        padding-top: 70px;
 
         .container {
             display: flex;
             flex-direction: column;
             width: 80%;
-            height: auto;
-            padding: 50px;
+            padding: 40px 60px;
             gap: 30px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 20px;
             border-radius: 12px;
             border: 1px solid #ccc;
-
-            .ng-cont1 {
-                display: flex;
-                flex-direction: column;
-
-                h2 {
-                    text-align: center;
-                    font-size: 18px;
-                    margin-bottom: 20px;
-                    color: #ddd;
-                }
-
-                .steps-indicator {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    width: 100%;
-                    margin-bottom: 25px;
-                }
-
-                .steps-indicator div {
-                    display: flex;
-                    justify-content: space-between;
-                    width: 100%;
-                    font-weight: 600;
-                    color: #ddd;
-                    gap: 10px;
-                    font-size: 10px;
-
-
-
-                    .ng-cont {
-                        gap: 0;
-
-                        .ng-bola {
-                            width: 30px;
-                            height: 30px;
-                            border-radius: 50%;
-                            line-height: 30px;
-                        }
-
-
-                        .ng-hr {
-                            width: 40%;
-                            height: 3px;
-                        }
-                    }
-                }
-
-            }
         }
     }
 }
