--- a/src/app/features/pages/home/menuDropDown/menudrop.component.scss
+++ b/src/app/features/pages/home/menuDropDown/menudrop.component.scss
@@ -23,7 +23,7 @@
            color: #79717A;
 
            .active-page {
-               background-color: #bddefa;
+               background-color: #cecece;
 
            }
 
@@ -69,7 +69,7 @@
 
 
                li:hover {
-                   background-color: #bddefa;
+                   background-color: #e2e2e2;
 
                }
 
