--- a/src/app/features/pages/home/mobile-navbar/mobile-navbar.component.scss
+++ b/src/app/features/pages/home/mobile-navbar/mobile-navbar.component.scss
@@ -32,4 +32,18 @@
       font-weight: 550;
     }
   }
+
+}
+
+.ng-isAdmin {
+  background-color: #F2F2F2;
+  color: #555;
+
+
+  button {
+    mat-icon, span {
+      color: #555;
+    }
+
+  }
 }
