--- a/src/app/features/pages/home/menuDropDown/menudrop.component.scss
+++ b/src/app/features/pages/home/menuDropDown/menudrop.component.scss
@@ -2,6 +2,7 @@
        height: auto;
        padding-bottom: 200px;
        box-shadow: 0, 8px, 0, 2.3;
+       border-right: 1px solid #eee;
 
 
        .btn {
